Documentation/5.2/Raven.Documentation.Pages/client-api/operations/maintenance/indexes/put-indexes.dotnet.markdown
# Put Indexes Operation

 ---

{NOTE: }

* There are a few ways to create and deploy indexes in a database.  

* This page describes deploying a __static-index__ using the `PutIndexesOperation` Operation.  
  For a general description of Operations see [what are operations](../../../../client-api/operations/what-are-operations).  

* In this page:
    * [Ways to deploy indexes - short summary](../../../../client-api/operations/maintenance/indexes/put-indexes#ways-to-deploy-indexes---short-summary)
    * [Put indexes operation with IndexDefinition](../../../../client-api/operations/maintenance/indexes/put-indexes#put-indexes-operation-with-indexdefinition)
    * [Put indexes operation with IndexDefinitionBuilder](../../../../client-api/operations/maintenance/indexes/put-indexes#put-indexes-operation-with-indexdefinitionbuilder)
    * [Syntax](../../../../client-api/operations/maintenance/indexes/put-indexes#syntax)

{NOTE/}

---

{PANEL: Ways to deploy indexes - short summary }
{NOTE: }

__Static index__:

There are a few ways to deploy a static-index from the Client API:  

  * Call `Execute()` on a specific index instance
  * Call `IndexCreation.CreateIndexes()` to deploy multiple indexes
  * Execute `PutIndexesOperation` maintenance operation on the Document Store - see below
  * Learn more in [static indexes](../../../../indexes/creating-and-deploying#static-indexes)

{NOTE/}
{NOTE: }

__Auto index__:  

  * An auto-index is created by the server when making a filtering query that doesn't specify which index to use
  * Learn more in [auto indexes](../../../../indexes/creating-and-deploying#auto-indexes)

{NOTE/}  
{PANEL/}

{PANEL: Put indexes operation with IndexDefinition }
{NOTE: }

Using `PutIndexesOperation` with __IndexDefinition__ allows the following:  

  * Choosing any name for the index.
  * Setting low-level properties available in _IndexDefinition_.
{NOTE/}

{CODE-TABS}
{CODE-TAB:csharp:LINQ-index-Sync put_1@ClientApi\Operations\Maintenance\Indexes\Put.cs /}
{CODE-TAB:csharp:LINQ-index-Async put_1_async@ClientApi\Operations\Maintenance\Indexes\Put.cs /}
{CODE-TAB:csharp:JavaScript-index put_1_JS@ClientApi\Operations\Maintenance\Indexes\Put.cs /}
{CODE-TABS/}

{PANEL/}

{PANEL: Put indexes operation with IndexDefinitionBuilder }
{NOTE: }

Using `PutIndexesOperation` with an IndexDefinition created from an __IndexDefinitionBuilder__ allows:  

  * Creating an index definition using a strongly typed LINQ syntax.  
  * Setting low-level properties available in _IndexDefinitionBuilder_.
  * Note:  
    Only map or map-reduce indexes can be generated by the _IndexDefinitionBuilder_.  
    To generate multi-map indexes use the above _IndexDefinition_ option. 

{NOTE/}

{CODE-TABS}
{CODE-TAB:csharp:Sync put_2@ClientApi\Operations\Maintenance\Indexes\Put.cs /}
{CODE-TAB:csharp:Async put_2_async@ClientApi\Operations\Maintenance\Indexes\Put.cs /}
{CODE-TABS/}

{PANEL/}

{PANEL: Syntax }

{CODE syntax@ClientApi\Operations\Maintenance\Indexes\Put.cs /}

| Parameters | Type | Description |
| - |- | - |
| **indexesToAdd** | `params IndexDefinition[]` | Definitions of indexes to deploy |

[//]: # (__The IndexDefinition class__)

| `IndexDefinition` | | |
| - | - | - |
| Name | string | Name of the index, a unique identifier |
| Maps | HashSet&lt;string&gt; | All the map functions for the index |
| Reduce | string | The index reduce function |
| DeploymentMode | `IndexDeploymentMode`? | Deployment mode<br>(Parallel, Rolling) |
| State | `IndexState`? | State of index<br>(Normal, Disabled, Idle, Error) |
| Priority | `IndexPriority`? | Priority of index<br>(Low, Normal, High) |
| LockMode | `IndexLockMode`? | Lock mode of index<br>(Unlock, LockedIgnore, LockedError) |
| Fields | Dictionary&lt;string, `IndexFieldOptions`&gt; | _IndexFieldOptions_ per index field |
| AdditionalSources | Dictionary&lt;string, string&gt; | Additional code files to be compiled with this index |
| AdditionalAssemblies | HashSet&lt;`AdditionalAssembly`&gt; | Additional assemblies that are referenced |
| Configuration | `IndexConfiguration` | Can override [indexing configuration](../../../../server/configuration/indexing-configuration) by setting this dictionary |
| OutputReduceToCollection | string | A collection name for saving the reduce results as documents |
| ReduceOutputIndex | long? | This number will be part of the reduce results documents IDs |
| PatternForOutputReduceToCollectionReferences | string | Pattern for documents IDs which reference IDs of reduce results documents |
| PatternReferencesCollectionName | string | A collection name for the reference documents created based on provided pattern |

| Return value of `store.Maintenance.Send(putIndexesOp)` | |
| - | - |
| `PutIndexResult[]` | List of _PutIndexResult_ per index |

| `PutIndexResult` | | |
| - | - | - |
| Index | string | Name of the index that was added |
| RaftCommandIndex | long | Index of raft command that was executed |

{PANEL/}

## Related Articles

### Indexes

- [What are Indexes](../../../../indexes/what-are-indexes)
- [Creating and Deploying Indexes](../../../../indexes/creating-and-deploying)

### Server

- [Index Administration](../../../../server/administration/index-administration)

### Operations

- [What are operations](../../../../client-api/operations/what-are-operations)
- [How to Get Indexes](../../../../client-api/operations/maintenance/indexes/get-indexes)
- [How to Delete Index](../../../../client-api/operations/maintenance/indexes/delete-index)
- [How to Reset Index](../../../../client-api/operations/maintenance/indexes/reset-index)
